<resources>
    <string name="app_name">PetsMatchingApp</string>

    <string name="app_name_chinese">寵物約散</string>

    <string name="please_wait">Please Wait</string>
    <string name="login">登入</string>
    <string name="hint_enter_your_email">請輸入信箱</string>
    <string name="hint_enter_your_password">請輸入密碼</string>
    <string name="login_forgot_account">忘記密碼</string>
    <string name="login_don_have_account">還沒有帳號嗎?</string>
    <string name="login_don_have_account_register">還沒有帳號嗎?註冊</string>
    <string name="register">註冊</string>
    <string name="msg_login_successful">登入成功</string>

    <string name="toolbar_title_register_account">註冊帳號</string>
    <string name="hint_enter_your_name">請輸入您的姓名</string>
    <string name="hint_enter_again_password">請再次輸入您的密碼</string>
    <string name="hint_do_not_enter_same_password">請再確認密碼是否一致</string>
    <string name="register_already_have_account">我已經註冊囉!點我登入</string>
    <string name="register_success">恭喜您註冊成功!</string>

    <string name="toolbar_title_forgot_account">忘記密碼</string>
    <string name="forgotAccount_find_your_account">找回密碼</string>
    <string name="forgotAccount_description">請輸入您的信箱，我們將會傳送信箱到您的郵件地址。並請您透過信箱去完成更改密碼的手續。 </string>
    <string name="submit">送出</string>
    <string name="forgotAccount_already_send_email">我們已經寄送更改密碼的信件到您信箱囉!</string>
    <string name="title_activity_pet">MainActivity</string>
    <string name="title_home">我的主頁</string>
    <string name="title_dashboard">所有約散</string>
    <string name="title_notifications">訊息</string>
    <string name="title_activity_matching">MatchingActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title_profile">個人頁面</string>
    <string name="edit">修改</string>
    <string name="logout">登出</string>
    <string name="navigation_profile">導航個人頁面</string>
    <string name="navigation_add_invitation">導航新增邀約</string>
    <string name="hint_enter_your_area">請輸入您的居住區域</string>
    <string name="toolbar_title_edit_profile">修改資料</string>
    <string name="man">男性</string>
    <string name="female">女性</string>
    <string name="edit_user_detail_successful">修改資料完成!</string>
    <string name="update_user_profile_successful">修改資料成功!</string>
    <string name="hint_select_your_image">請選取照片!</string>

    <string name="toolbar_title_add_invitation">新增邀約</string>
    <string name="hint_enter_pet_type">請選擇寵物種類</string>
    <string name="hint_enter_pet_type_description">請輸入寵物品種</string>
    <string name="hint_enter_date_place">請輸入邀約地點</string>
    <string name="hint_enter_date_time">請輸入邀約時間</string>
    <string name="hint_enter_date_note">請輸入注意事項(如寵物害怕物品..)</string>
    <string name="update_pet_image_successful">上傳圖片成功!</string>
    <string name="hint_enter_area">請輸入邀約區域</string>


    <string name="add_invitation_successful">上傳邀約成功!</string>
    <string name="add_invitation_fail">上傳邀約失敗，請再試一次</string>



    <string name="alertDialog_title_do_you_want_delete">刪除約散</string>
    <string name="alertDialog_message_delete_description">刪除約散後，其他會員無法看到您的邀約。</string>
    <string name="alertDialog_delete_positive_yes">刪除</string>
    <string name="alertDialog_delete_negative_no">再考慮一下</string>
    <string name="delete_successful">成功刪除!</string>


    <string name="toolbar_title_invitation_detail">邀約內容</string>
    <string name="chat">聊天</string>
    <string name="pet_type">寵物種類</string>
    <string name="pet_type_description">寵物品種</string>
    <string name="date_area">邀約地區</string>
    <string name="date_place">邀約地點</string>
    <string name="date_time">邀約時間</string>
    <string name="date_note">注意事項</string>

    <string name="home_fragment_pet_type">寵物種類: %1$s-%2$s</string>
    <string name="home_fragment_pet_place">地點: %1$s-%2$s</string>
    <string name="home_fragment_pet_time">時間: %1$s</string>
    <string name="city_keelung">基隆市</string>
    <string name="city_taipei">台北市</string>
    <string name="city_newTaipei">新北市</string>
    <string name="toolbar_title_search_invitation">搜尋邀約</string>
    <string name="result_sort">結果排序</string>
    <string name="update_day">更新日期</string>
    <string name="invitation_day">邀約日期</string>
    <string name="other">其它</string>
    <string name="city_taoyuan">桃園市</string>
    <string name="city_xinzhu">新竹市</string>
    <string name="city_xinzhu_county">新竹縣</string>
    <string name="city_miaoli">苗栗市</string>
    <string name="city_miaoli_county">苗栗縣</string>
    <string name="city_taichung">台中市</string>
    <string name="city_zhanghua_county">彰化縣</string>
    <string name="city_zhanghua">彰化市</string>
    <string name="city_nantou">南投市</string>
    <string name="nantou_county">南投縣</string>
    <string name="city_yunlin_county">雲林縣</string>
    <string name="city_jiayi">嘉義市</string>
    <string name="city_jaiyi_county">嘉義縣</string>
    <string name="city_tainan">台南市</string>
    <string name="city_gaoxiong">高雄市</string>
    <string name="city_pingtung">屏東市</string>
    <string name="city_pingtung_county">屏東縣</string>
    <string name="city_yilan">宜蘭市</string>
    <string name="city_yilan_county">宜蘭縣</string>
    <string name="city_hualien_county">花蓮縣</string>
    <string name="city_hualien">花蓮市</string>
    <string name="city_taidong_county">台東縣</string>
    <string name="city_taidong">台東市</string>
    <string name="city_penghu_county">澎湖縣</string>
    <string name="city_ludao">綠島</string>
    <string name="city_lanyu">蘭嶼</string>
    <string name="city_jinmen">金門縣</string>
    <string name="city_matus">馬祖</string>
    <string name="city_lianjiang">連江縣</string>
    <string name="dog">狗</string>
    <string name="cat">貓</string>
    <string name="rabbit">兔子</string>
    <string name="bird">鳥</string>
    <string name="pig">豬</string>
    <string name="fish">魚</string>
    <string name="search">搜尋</string>
    <string name="invitation_time">邀約時間</string>
    <string name="update_time">更新時間</string>


    <string name="msg_choose_your_result_sort">請選擇排序方法</string>

    <string name="transition_photo">photo %d</string>
    <string name="transition_type">type %d</string>
    <string name="transition_place">place %d</string>
    <string name="transition_time">time %d</string>

    <string name="already_selected_photo">已選擇照片</string>
    <string name="already_send_photo">已傳送照片</string>
    <string name="already_accept_photo">$d 傳送一張照片</string>

    <string name="string_test1">他是%1$2d</string>
    <string name="string_test2">他是%1$d</string>
    <string name="string_test3">他是%1$d</string>
    <string name="string_test4">他是%1$d,他不是%2$d</string>
    <string name="string_test5">他是%1$d,他不是%3$4d</string>

    <string name="combine_test1">他是%1$s，今天%2$2d 歲</string>
    <string name="string_string_test">他是%1$s，今天是%2$1s</string>

    <string name="float_test1">分數是%1$f</string>
    <string name="float_test2">分數是%1$.5f</string>

    <string name="time_form">時間%1$s</string>
    <string name="selected_count">已經選擇%1$d張照片</string>

</resources>