<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.EditProfileFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_pewter_blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/toolbar_title_edit_profile"
                android:textSize="@dimen/toolbar_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white">

            </TextView>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_edit_profile_image"
            android:layout_width="@dimen/user_image_width_height"
            android:layout_height="@dimen/user_image_width_height"
            app:layout_constraintTop_toBottomOf="@id/toolbar_edit_profile_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/edit_image_margin_top">

        </ImageView>

        <ImageView
            android:id="@+id/iv_edit_profile_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_edit_profile_image"
            app:layout_constraintEnd_toEndOf="@id/iv_edit_profile_image">

        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_edit_profile_fragment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/tip_margin_start_end"
            android:layout_marginEnd="@dimen/tip_margin_start_end"
            android:layout_marginTop="@dimen/tip_margin_top_bottom"
            app:layout_constraintTop_toBottomOf="@id/iv_edit_profile_camera"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.example.petsmatchingapp.utils.JFEditText
                android:id="@+id/ed_edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edText_padding"
                android:textSize="@dimen/edText_textSize"
                android:hint="@string/hint_enter_your_name"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_edit_fragment_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/tip_margin_start_end"
            android:layout_marginEnd="@dimen/tip_margin_start_end"
            android:layout_marginTop="@dimen/tip_margin_top_bottom"
            app:layout_constraintTop_toBottomOf="@id/tip_edit_profile_fragment_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.example.petsmatchingapp.utils.JFEditText
                android:id="@+id/ed_edit_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edText_padding"
                android:textSize="@dimen/edText_textSize"
                android:hint="@string/hint_enter_your_area">

            </com.example.petsmatchingapp.utils.JFEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/radiogp_edit_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tip_edit_fragment_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/tip_margin_start_end"
            android:layout_marginEnd="@dimen/tip_margin_start_end"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <com.example.petsmatchingapp.utils.JFRadioButton
                android:id="@+id/rb_man"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/man"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_button_background">

            </com.example.petsmatchingapp.utils.JFRadioButton>


            <com.example.petsmatchingapp.utils.JFRadioButton
                android:id="@+id/rb_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:button="@null"
                android:text="@string/female"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_button_background">

            </com.example.petsmatchingapp.utils.JFRadioButton>

        </RadioGroup>




        <com.example.petsmatchingapp.utils.JFButton
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tip_margin_start_end"
            android:layout_marginEnd="@dimen/tip_margin_start_end"
            app:layout_constraintTop_toBottomOf="@id/radiogp_edit_profile_fragment"
            android:text="@string/edit"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp">

        </com.example.petsmatchingapp.utils.JFButton>






    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>